Rename main class, and optimization